Current Issues: -Invalid login when I try to log into created accounts? -Having trouble linking to register page for givers to the proper account manage page for only the giver layout.
Changes
-Added taker and giver to navbar layout inside of taker account
-change pw page now looks good
-add phone now looks good
-added 2 more about dropdowns to fill the page
-commented out my registergiver area in acountController incase it was breaking something (doesnt appear to be but I dont know what is up with this invalid login attempts)

--- a/WebApplication4/WebApplication4.csproj
+++ b/WebApplication4/WebApplication4.csproj
@@ -380,6 +380,11 @@
     <Content Include="Views\Surveys\Details.cshtml" />
     <Content Include="Views\Surveys\Edit.cshtml" />
     <Content Include="Views\Surveys\Index.cshtml" />
+    <Content Include="Views\SurveyGiver\Create.cshtml" />
+    <Content Include="Views\SurveyGiver\Delete.cshtml" />
+    <Content Include="Views\SurveyGiver\Details.cshtml" />
+    <Content Include="Views\SurveyGiver\Edit.cshtml" />
+    <Content Include="Views\SurveyGiver\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
