--- a/WebApplication4/WebApplication4.csproj
+++ b/WebApplication4/WebApplication4.csproj
@@ -387,6 +387,10 @@
     <Content Include="Views\SurveyGiver\Index.cshtml" />
     <Content Include="Views\Account\RegisterGiver.cshtml" />
     <Content Include="Views\Manage\IndexGiver.cshtml" />
+    <Content Include="Views\Home\AboutGiver.cshtml" />
+    <Content Include="Views\Home\ContactGiver.cshtml" />
+    <Content Include="Views\Home\FAQGiver.cshtml" />
+    <Content Include="Views\Home\PrivacyPolicyGiver.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
