Register issue fixed. Current issues -invalid logins -minor giver layout changes -display info on manage account pages -take survey needs working -questions for survey giver

--- a/WebApplication4/WebApplication4.csproj
+++ b/WebApplication4/WebApplication4.csproj
@@ -391,6 +391,7 @@
     <Content Include="Views\Home\ContactGiver.cshtml" />
     <Content Include="Views\Home\FAQGiver.cshtml" />
     <Content Include="Views\Home\PrivacyPolicyGiver.cshtml" />
+    <Content Include="Views\Manage\_Layoutgiver.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
