--- a/WebApplication4/WebApplication4.csproj
+++ b/WebApplication4/WebApplication4.csproj
@@ -392,6 +392,11 @@
     <Content Include="Views\Home\FAQGiver.cshtml" />
     <Content Include="Views\Home\PrivacyPolicyGiver.cshtml" />
     <Content Include="Views\Manage\_Layoutgiver.cshtml" />
+    <Content Include="Views\Shared\_LoginPartialGiver.cshtml" />
+    <Content Include="Views\Account\_LayoutLogin.cshtml" />
+    <Content Include="Views\Home\_Layoutgiver.cshtml" />
+    <Content Include="Views\Surveys\_Layoutgiver.cshtml" />
+    <Content Include="Views\SurveyGiver\_Layoutgiver.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
