--- a/WebApplication4/WebApplication4.csproj
+++ b/WebApplication4/WebApplication4.csproj
@@ -283,7 +283,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Controllers\SurveyGiverController.cs" />
-    <Compile Include="Controllers\SurveysTakerController.cs" />
+    <Compile Include="Controllers\SurveyTakerController.cs" />
     <Compile Include="Controllers\SurveysController.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -370,11 +370,11 @@
     <Content Include="Views\Home\FAQ.cshtml" />
     <Content Include="Views\Home\PrivacyPolicy.cshtml" />
     <Content Include="Views\Manage\_LayoutLogin.cshtml" />
-    <Content Include="Views\SurveysTaker\Create.cshtml" />
-    <Content Include="Views\SurveysTaker\Delete.cshtml" />
-    <Content Include="Views\SurveysTaker\Details.cshtml" />
-    <Content Include="Views\SurveysTaker\Edit.cshtml" />
-    <Content Include="Views\SurveysTaker\Index.cshtml" />
+    <Content Include="Views\SurveyTaker\Create.cshtml" />
+    <Content Include="Views\SurveyTaker\Delete.cshtml" />
+    <Content Include="Views\SurveyTaker\Details.cshtml" />
+    <Content Include="Views\SurveyTaker\Edit.cshtml" />
+    <Content Include="Views\SurveyTaker\Index.cshtml" />
     <Content Include="Views\Surveys\Create.cshtml" />
     <Content Include="Views\Surveys\Delete.cshtml" />
     <Content Include="Views\Surveys\Details.cshtml" />
