--- a/WebApplication4/WebApplication4.csproj
+++ b/WebApplication4/WebApplication4.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\SurveyMAQsController.cs" />
     <Compile Include="Controllers\SurveyQuestionsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -401,6 +402,13 @@
     <Content Include="Views\SurveyGiver\EditQuestion.cshtml" />
     <Content Include="Views\SurveyQuestions\Index.cshtml" />
     <Content Include="Views\SurveyQuestions\Create.cshtml" />
+    <Content Include="Views\SurveyQuestions\Edit.cshtml" />
+    <Content Include="Views\SurveyMAQs\Create.cshtml" />
+    <Content Include="Views\SurveyMAQs\Delete.cshtml" />
+    <Content Include="Views\SurveyMAQs\Details.cshtml" />
+    <Content Include="Views\SurveyMAQs\Edit.cshtml" />
+    <Content Include="Views\SurveyMAQs\Index.cshtml" />
+    <Content Include="Views\SurveyQuestions\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
