--- a/WebApplication4/WebApplication4.csproj
+++ b/WebApplication4/WebApplication4.csproj
@@ -397,7 +397,6 @@
     <Content Include="Views\SurveyGiver\EditQuestion.cshtml" />
     <Content Include="Views\SurveyQuestions\Index.cshtml" />
     <Content Include="Views\SurveyQuestions\Create.cshtml" />
-
     <Content Include="Views\SurveyTaker\Create.cshtml" />
     <Content Include="Views\SurveyTaker\Delete.cshtml" />
     <Content Include="Views\SurveyTaker\Details.cshtml" />
@@ -410,6 +409,7 @@
     <Content Include="Views\SurveyMAQs\Edit.cshtml" />
     <Content Include="Views\SurveyMAQs\Index.cshtml" />
     <Content Include="Views\SurveyQuestions\Details.cshtml" />
+    <Content Include="Views\Surveys\EditQuestionsField.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
