Site wide Statistics Working account page Some personal stats

--- a/WebApplication4/Web.config
+++ b/WebApplication4/Web.config
@@ -10,7 +10,9 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Server=tcp:uscupstatecsci540group1-5.database.windows.net,1433;Initial Catalog=SurveySaysDB2;Persist Security Info=False;User ID=sysadmin;Password=zhyJ@HGJV60sTVi;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
-  <add name="SurveySaysDB2Entities" connectionString="metadata=res://*/Models.SurveyModel.csdl|res://*/Models.SurveyModel.ssdl|res://*/Models.SurveyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=uscupstatecsci540group1-5.database.windows.net;initial catalog=SurveySaysDB2;persist security info=True;user id=sysadmin;password=zhyJ@HGJV60sTVi;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="SurveySaysDB2Entities" connectionString="metadata=res://*/Models.SurveyModel.csdl|res://*/Models.SurveyModel.ssdl|res://*/Models.SurveyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=uscupstatecsci540group1-5.database.windows.net;initial catalog=SurveySaysDB2;persist security info=True;user id=sysadmin;password=zhyJ@HGJV60sTVi;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AccountInfoViewModels" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=WebApplication4.Models.AccountInfoViewModels;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -103,5 +105,4 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  
 </configuration>
