--- a/WebApplication4/WebApplication4.csproj
+++ b/WebApplication4/WebApplication4.csproj
@@ -298,9 +298,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Content\img\sides1.png" />
     <Content Include="Content\img\sides2.png" />
-    <Content Include="Content\img\sides3.png" />
     <Content Include="Models\SurveyModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>SurveyModel.edmx</DependentUpon>
@@ -323,6 +321,7 @@
     <Content Include="Models\SurveyModel.edmx.diagram">
       <DependentUpon>SurveyModel.edmx</DependentUpon>
     </Content>
+    <None Include="Properties\PublishProfiles\WebApplication420181203042127 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
