Added StartSurveys page, need to create a new Response somehow

--- a/WebApplication4/WebApplication4.csproj
+++ b/WebApplication4/WebApplication4.csproj
@@ -414,6 +414,7 @@
     <Content Include="Views\SurveyTaker\MultipleAnswer.cshtml" />
     <Content Include="Views\SurveyTaker\MultipleChoice.cshtml" />
     <Content Include="Views\SurveyTaker\ShortAnswer.cshtml" />
+    <Content Include="Views\SurveyTaker\StartSurvey.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
